<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">healthMonitor</string>
    <string name="systName">«Комплексная система мониторинга здоровья»</string>
    <string name="autName">Иванов А.И.</string>
    <string name="age">Age</string>
    <string name="date">Name</string>
    <string name="button">Button</string>
    <string name="authtor">Иванов А.И.</string>
    <string name="todo">TODO</string>
    <string name="save">Сохранить</string>
    <string name="upper">Верхнее давление</string>
    <string name="lower">Нижнее давление</string>
    <string name="tahicard">Тахикардия</string>
    <string name="saveButton" >Сохранить</string>
    <string name="pulse">Пульс</string>
    <string name="name">"Дата "</string>
    <string name="Dater">Дата</string>
    <string name="Weight">Вес</string>
    <string name="Trek">Кол.- во шагов</string>
    <string name="Button">Сохранить</string>
    <string name="presure">Давление</string>
    <string name="LiveInd">ЖПЗ</string>
    <string name="buttonSave">Сохранить</string>
    <string name="incorrect_value">Введены неправильные данные</string>
    <string name="incorrect_value2">Введены неверные данные</string>
    <string name="incorrect_value3">Введены неверные данные</string>
    <string name="Имя">Name</string>
    <string name="Name">Имя</string>
    <string name="author">Иванов В.К.</string>
    <string name="systname">\"Комплексная система мониторинга здоровья\"</string>
    <string name="Age">Возраст</string>
    <string name="saveMain2">save button clicked</string>
    <string name="saveMain3">save button licked</string>
</resources>
