<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/saveBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tahSw"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/lowerEdTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lower"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/upperEdTx"
        app:layout_constraintTop_toBottomOf="@+id/upperEdTx"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/upperEdTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/upper"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lowerEdTx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/pulseEdTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pulse"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowerEdTx"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/dateEdTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Dater"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pulseEdTx"
        tools:ignore="MissingConstraints,TextFields" />

    <Switch
        android:id="@+id/tahSw"
        android:layout_width="129dp"
        android:layout_height="17dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:text="@string/tahicard"
        app:layout_constraintStart_toStartOf="@+id/dateEdTx"
        app:layout_constraintTop_toBottomOf="@+id/dateEdTx"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>